<resources>
    <string name="app_name">FieldoutAdmin</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD917w2chNF_jp_9W5f7s-yZ-jTqcYY3Lg</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="company">Company</string>
    <string name="enter_company_name">Enter company name</string>
    <string name="telephone">Telephone</string>
    <string name="enter_telephone_name">Enter telephone number</string>
    <string name="email">Email</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="choose_your_fieldout_site_address">Choose your FieldOut® site address</string>
    <string name="https">https://</string>
    <string name="my_company">my company</string>
    <string name="fieldout_com">.fieldout.com</string>
    <string name="sign_me_up">Sign me Up!</string>
    <string name="by_clicking_sign_me_up_you_are_agreeing_to_the_terms_amp_conditions_and_privacy_policy"><![CDATA[By clicking Sign me up you are agreeing to the terms & conditions and privacy policy]]></string>
    <string name="projects_and_jobs">Projects and Jobs</string>
    <string name="job_types">Job Types</string>
    <string name="set_your_job_types_default_durations_and_associated_job_reporting_templates">Set your job types, default durations and associated job reporting templates</string>
    <string name="scheduling_windows">Scheduling Windows</string>
    <string name="set_default_scheduling_windows_for_jobs_morning_afternoon_etc">Set default scheduling windows for jobs (Morning, Afternoon, etc.)</string>
    <string name="projects_types">Projects Types</string>
    <string name="set_your_projects_types_and_configure_job_sequences">Set your Projects Types and configure Job Sequences</string>
    <string name="job_report_templates">Job Report Templates</string>
    <string name="add_edit_or_remove_job_report_templates">Add, Edit or Remove job report templates</string>
    <string name="attachments">Attachments</string>
    <string name="add_modify_or_remove_attachment_files">Add, Modify or Remove attachment files</string>
    <string name="general_configuration">General Configuration</string>
    <string name="my_account">My Account</string>
    <string name="manage_your_subscription_your_licenses_invoices_and_your_general_settings">Manage your Subscription your licenses, invoices and your general settings</string>
    <string name="regional_settings">Regional Settings</string>
    <string name="manage_date_time_decimal_and_currency_formats">Manage Date, Time, Decimal and Currency formats</string>
    <string name="taxes">Taxes</string>
    <string name="manage_tax_rates_e_g_vat_state_tax_etc">Manage Tax rates (e.g. VAT, State Tax, etc.)</string>
    <string name="options">Options</string>
    <string name="manage_synchronization_triggers_and_general_system_parameters_turn_system_and_mobile_functions_on_or_off">Manage synchronization triggers and general system parameters. Turn system and mobile functions ON or OFF</string>
    <string name="customer_email">Customer Email</string>
    <string name="edit_the_email_sent_with_job_reports">Edit the email sent with job Reports</string>
    <string name="footer">Footer</string>
    <string name="customize_the_footer_for_job_reports_and_invoices">Customize the footer for Job Reports and Invoices</string>
    <string name="trash">Trash</string>
    <string name="items_deleted_are_kept_here_30_days_and_can_be_restored">Items deleted are kept here 30 days, and can be restored</string>
    <string name="team_and_resources">Team and Resources</string>
    <string name="users">Users</string>
    <string name="add_edit_or_remove_user_accounts">Add, Edit or Remove user accounts</string>
    <string name="teams">Teams</string>
    <string name="group_your_technicians_into_teams">Group your technicians into teams</string>
    <string name="manage_activity_types_vacation_sickness_etc_and_associated_colors_for_display_in_the_planning_view">Manage activity types (Vacation, Sickness, etc.) and associated colors for display in the planning view</string>
    <string name="tools_and_resources">Tools and Resources</string>
    <string name="define_your_equipment_inventory_tools_vehicles_etc_that_can_be_booked_on_jobs_by_your_team">Define your equipment inventory (Tools, Vehicles, etc.) that can be booked on jobs by your team</string>
    <string name="parts_amp_services"><![CDATA[Parts & Services]]></string>
    <string name="manage_your_standard_parts_and_services_catalogue">Manage your standard parts and services catalogue</string>
    <string name="custom_fields">Custom Fields</string>
    <string name="add_edit_or_remove_custom_fields_to_jobs_customers_users_etc">Add, Edit or Remove custom fields to jobs, customers, users, etc</string>
    <string name="import_export">Import / Export</string>
    <string name="import_export_customers_sites_equipment_and_catalogs">Import / Export customers, sites, equipment and catalogs</string>
    <string name="create_your_own_custom_reports">Create your own custom reports</string>
    <string name="tags">Tags</string>
    <string name="manage_all_system_tags_global_tags_and_or_technician_skills">Manage all system tags (Global Tags and/or Technician skills)</string>
    <string name="mobile_and_integrations">Mobile and Integrations</string>
    <string name="authentication_key">Authentication Key</string>
    <string name="manage_authentication_for_the_web_services">Manage authentication for the Web Services</string>
    <string name="integrations">Integrations</string>
    <string name="manage_third_party_integrations">Manage third party integrations</string>
    <string name="mobile_client_download">Mobile Client Download</string>
    <string name="download_clients_for_ios_or_android">Download clients for IOS or Android</string>
    <string name="account_information">Account Information</string>
    <string name="company_name">Company Name</string>
    <string name="user_name">Username</string>
    <string name="address_label">Address</string>
    <string name="email_address">Email Address</string>
    <string name="address_value">Address Value</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="change">Change Profile</string>
    <string name="bussiness_hours">Bussiness Hours</string>
    <string name="day">Day</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="closed">Closed</string>
    <string name="monday">Monday</string>
    <string name="_08_00_am">08:00 AM</string>
    <string name="_08_00_pm">08:00 PM</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="save">Save</string>
    <string name="account_information_details">Account Information Details</string>
    <string name="customer">Customer</string>
    <string name="customer_name">Customer Name</string>
    <string name="contact">Contact</string>
    <string name="first_name">First Name</string>
    <string name="phone">Phone</string>
    <string name="fax">Fax</string>
    <string name="enter_telephone_number">Enter Phone Number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_fax_number">Enter Fax Number</string>
    <string name="enter_address">Enter Address</string>
    <string name="billing_address">Billing Address</string>
    <string name="enter_billing_address">Enter biling address</string>
    <string name="email_sender">Email sender</string>
    <string name="enter_a_valid_email_address">Enter a valid e-mail address</string>
    <string name="vat_number">VAT Number</string>
    <string name="cancel">Cancel</string>
    <string name="user">User</string>
    <string name="profile">Profile</string>
    <string name="skilled_trades">Skilled Trades</string>
    <string name="add_user">Add User</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="sub_contractor">Subcontractor</string>
    <string name="password">Password</string>
    <string name="enter_password">Password</string>
    <string name="time_zone">Time Zone</string>
    <string name="start_location">Start location</string>
    <string name="additional_information">Additional Information</string>
    <string name="skill">skill</string>
    <string name="enter_skilled_trades">Enter skilled Trades</string>
    <string name="add_team">Add Team</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="technicians">Technicians</string>
    <string name="managers">Managers</string>
    <string name="team">Team</string>
    <string name="enter_team_name">Enter Team Name</string>
    <string name="enter_description">Description</string>
    <string name="all_managers">All Managers</string>
    <string name="all_technicians">All technicians</string>
    <string name="acitivities">Activities</string>
    <string name="color">Color</string>
    <string name="generate_with_conflict">Generate a conflict with jobs ?</string>
    <string name="add_activity_type">Add Activity type</string>
    <string name="activities">Activities</string>
    <string name="add_tools_resource">Add Tools/Resource</string>
    <string name="tools_resource">Tools/Resource</string>
    <string name="equipment">Equipment</string>
    <string name="add_job_type">Add Job Type</string>
    <string name="duration">Duration</string>
    <string name="job_report">Job Report</string>
    <string name="priorities">Priorities</string>
    <string name="default_text">Default</string>
    <string name="title_activity_add_jobs_type">AddJobsTypeActivity</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="label">Label</string>
    <string name="time_start">Time Start</string>
    <string name="time_end">Time End</string>
    <string name="public_text">Public</string>
    <string name="add_project_type">Add Project Type</string>
    <string name="type">Type</string>
    <string name="job_sequence">Job Sequence</string>
    <string name="size">Size</string>
    <string name="add_attachment">Add Atachment</string>
    <string name="click_to_add">Click To Add</string>
    <string name="date_and_time_format">Date and Time format</string>
    <string name="short_date_format">Short Date Format</string>
    <string name="_2017_12_29">2017/12/29</string>
    <string name="short_time_format">Short Time Format</string>
    <string name="decimal_and_currency_format">Decimal and Currency format</string>
    <string name="_11_29">11:29</string>
    <string name="long_date_format">Long Date Format</string>
    <string name="wed_dec">Wednesday, December 27, 2017</string>
    <string name="decimal_separator">Decimal Separator</string>
    <string name="_153_60">153.60</string>
    <string name="group_separator">Group Separator</string>
    <string name="_125_452">125,452.75</string>
    <string name="currency_symbol">Currency Symbol</string>
    <string name="currency_symbol_ex">1,512.56 INR</string>
    <string name="distance_unit">Distance Unit</string>
    <string name="km">125 Km</string>
    <string name="address_format">Address Format</string>
    <string name="ex_address_format">Street,Zip code,City,Country</string>
    <string name="add_taxes">Add Taxes</string>
    <string name="rate">Rate (%)</string>
    <string name="default_tax">Default Tax</string>
    <string name="no_teams_found">No Teams Found</string>
    <string name="no_users_found">No Users Found</string>
    <string name="language">Language</string>
</resources>