<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableRow
        android:layout_width="match_parent"
        android:background="@color/button"
        android:layout_gravity="center"
        android:minHeight="100px"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="left|center"
            android:layout_column="0"
            android:layout_weight="50"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/sub_header_size"
            android:text="@string/user"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="left|center"
            android:layout_weight="50"
            android:layout_marginLeft="10dp"
            android:layout_column="1"
            android:textSize="@dimen/sub_header_size"
            android:text="@string/user_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_weight="50"
            android:layout_gravity="left|center"
            android:textSize="@dimen/sub_header_size"
            android:layout_column="2"
            android:text="@string/language"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="left|center"
            android:layout_column="3"
            android:layout_marginLeft="10dp"
            android:layout_weight="50"
            android:textSize="@dimen/sub_header_size"
            android:text="@string/email"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_weight="50"
            android:layout_column="4"
            android:layout_gravity="left|center"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/sub_header_size"
            android:text="@string/profile"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_column="5"
            android:layout_gravity="left|center"
            android:layout_weight="50"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/sub_header_size"
            android:text="@string/skilled_trades"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="left|center"
            android:layout_weight="50"
            android:layout_column="6"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/sub_header_size"
            android:text="@string/teams"/>


    </TableRow>





</LinearLayout>