<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableRow
        android:id="@+id/table_row_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/button"
        android:minHeight="100px">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="10dp"
            android:layout_weight="50"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="@dimen/sub_header_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="10dp"
            android:layout_weight="50"
            android:text="@string/duration"
            android:textColor="@color/white"
            android:textSize="@dimen/sub_header_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="10dp"
            android:layout_weight="50"
            android:text="@string/job_report"
            android:textColor="@color/white"
            android:textSize="@dimen/sub_header_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="10dp"
            android:layout_weight="50"
            android:text="@string/priorities"
            android:textColor="@color/white"
            android:textSize="@dimen/sub_header_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="10dp"
            android:layout_weight="50"
            android:text="@string/skilled_trades"
            android:textColor="@color/white"
            android:textSize="@dimen/sub_header_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="50"
            android:text="@string/default_text"
            android:textColor="@color/white"
            android:textSize="@dimen/sub_header_size" />

    </TableRow>

</LinearLayout>