<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:background="@color/button"
        android:layout_gravity="center"
        android:minHeight="100px"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="left|center"
            android:layout_weight="50"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/sub_header_size"
            android:text="@string/acitivities"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="left|center"
            android:layout_weight="50"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/sub_header_size"
            android:text="@string/color"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="50"
            android:layout_gravity="left|center"
            android:textSize="@dimen/sub_header_size"
            android:text="@string/generate_with_conflict"/>

    </TableRow>

</LinearLayout>